TODO LIST (Moved again to the file TODO)

2003-6-20  Adriaan de Groot
* Updated the hardware lists on the website.

2003-6-20  Reinhold Kainhofer
* Implemented the dialog to change the database flags and the dates (DBInfo 
  struct) in the internal generic DB viewer. PilotLocalDatabase got a new 
  method setDBInfo for this.


2003-6-19  Reinhold Kainhofer
* Implemented the list of records in the generic DB viewer. To be 
  able to sort the records by their index, I had to write my own 
  compare method of the QListViewItem, which compares the numerical 
  representation of the column entries. For large DBs (>300 records) 
  this is way too slow (QString::toULong for each comparison, increasing 
  with n*n), so I had to implement some caching. Now even large databases 
  are sorted very fast.

2003-6-16  Reinhold Kainhofer
* First layout of the internal calendar viewer/editor. The KDatePicker
  poses a big problem to me as it swallows all toolbar buttons.
* Implemented a InternalEditorAction to sync changes done to the databases
  in the internal viewers. Every PilotComponent that changes a database
  needs to mark it as dirty (e.g. markDBDirt("AddressDB")) so the
  Action knows which databases need to be considered.

2003-6-15  Reinhold Kainhofer
* Implemented a first layout of the generic database viewer. To view
  the records, I'd need a hex editor, which is not available in KDE, yet.
  I tried using the widget that khexedit uses, but somehow I can't get
  it to work :-((

KPilot Developer's notes for June 15th, 2003
============================================

2003-6-15  Adriaan de Groot
* Yay, father's day. Which includes me. Mira drew me a wonderful card.
* Fixed some TL problems in debug output, and added documentation.

2003-6-14  Adriaan de Groot
* Fixed the conduit config dialog's repaint and behavior problems by
  ditching the .ui file and implementing it by hand again. I'll look
  into a switch back to .ui later.

2003-6-12  Reinhold Kainhofer