@@ -31,6 +31,12 @@
                     <verstretch>0</verstretch>
                 </sizepolicy>
             </property>
+            <property name="frameShape">
+                <enum>NoFrame</enum>
+            </property>
+            <property name="frameShadow">
+                <enum>Plain</enum>
+            </property>
             <property name="text">
                 <string>Database &amp;name:</string>
             </property>
@@ -252,29 +258,6 @@
                         <cstring>fBackupDate</cstring>
                     </property>
                 </widget>
-                <widget class="KTimeWidget" row="0" column="2">
-                    <property name="name">
-                        <cstring>fCreationTime</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>4</hsizetype>
-                            <vsizetype>5</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                </widget>
-                <widget class="KTimeWidget" row="1" column="2">
-                    <property name="name">
-                        <cstring>fModificationTime</cstring>
-                    </property>
-                </widget>
-                <widget class="KTimeWidget" row="2" column="2">
-                    <property name="name">
-                        <cstring>fBackupTime</cstring>
-                    </property>
-                </widget>
                 <widget class="KDateWidget" row="2" column="1">
                     <property name="name">
                         <cstring>fBackupDate</cstring>
@@ -345,11 +328,11 @@
         </spacer>
     </grid>
 </widget>
+<includes>
+    <include location="local" impldecl="in implementation">dbFlagsEditor_base.ui.h</include>
+</includes>
 <layoutdefaults spacing="6" margin="11"/>
 <includehints>
-    <includehint>ktimewidget.h</includehint>
-    <includehint>ktimewidget.h</includehint>
-    <includehint>ktimewidget.h</includehint>
     <includehint>kdatewidget.h</includehint>
     <includehint>kdatewidget.h</includehint>
     <includehint>kdatewidget.h</includehint>
