@@ -1,0 +1,15 @@
+/****************************************************************************
+** ui.h extension file, included from the uic-generated form implementation.
+**
+** If you wish to add, delete or rename functions or slots use
+** Qt Designer which will update this file, preserving your code. Create an
+** init() function in place of a constructor, and a destroy() function in
+** place of a destructor.
+*****************************************************************************/
+#ifndef KDE_VERSION
+#include <kdeversion.h>
+#endif
+
+#if KDE_VERSION < 0x30110
+#define KTimeWidget QWidget
+#endif
